updated code with csvs, cnt base if we ever need visualization help, and working on new model

--- a/notebooks/week3_implementation.ipynb
+++ b/notebooks/week3_implementation.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "# should we try this dataset maybe?\n",
     "url = \"https://osf.io/r26fh/download\"\n",
-    "data = pd.read_csv(url)\n"
+    "data = pd.read_csv(url)"
    ]
   },
   {
