--- a/notebooks/anphy_code/EPCTL_txt_read.ipynb
+++ b/notebooks/anphy_code/EPCTL_txt_read.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files found: ['/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL28 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL29 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL16 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL17 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL22 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL23 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL01 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL06 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL07 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL11 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL10 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL25 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL24 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL08 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL09 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL02 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL03 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL21 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL20 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL15 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL14 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL26 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL27 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL18 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL19 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL12 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL13 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL05 copy.txt', '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels/EPCTL04 copy.txt']\n"
+      "Files found: []\n"
      ]
     }
    ],
@@ -20,8 +20,8 @@
     "\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/EPCTL_all_subj_sleep_labels\"\n",
-    "results_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/results\"\n",
+    "data_dir = \"/Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset\"\n",
+    "results_dir = \"/Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/results\"\n",
     "\n",
     "file_list = glob.glob(os.path.join(data_dir, \"*.txt\"))\n",
     "\n",
@@ -30,40 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Patient  Stage  Start\n",
-      "0      EPCTL28      0   4860\n",
-      "1      EPCTL28      0   4890\n",
-      "2      EPCTL28      0   4920\n",
-      "3      EPCTL28      0   4950\n",
-      "4      EPCTL28      0   4980\n",
-      "...        ...    ...    ...\n",
-      "24188  EPCTL04      0  22350\n",
-      "24189  EPCTL04      0  22380\n",
-      "24190  EPCTL04      0  22410\n",
-      "24191  EPCTL04      0  22440\n",
-      "24192  EPCTL04      0  22470\n",
-      "\n",
-      "[24193 rows x 3 columns]\n",
-      "   Patient                                              Stage  \\\n",
-      "0  EPCTL01  [0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 2, 2, 0, ...   \n",
-      "1  EPCTL02  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-      "2  EPCTL03  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 2, 2, ...   \n",
-      "3  EPCTL04  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-      "4  EPCTL05  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-      "\n",
-      "                                               Start  \n",
-      "0  [0, 30, 60, 90, 120, 150, 180, 210, 240, 270, ...  \n",
-      "1  [1290, 1320, 1350, 1380, 1410, 1440, 1470, 150...  \n",
-      "2  [2130, 2160, 2190, 2220, 2250, 2280, 2310, 234...  \n",
-      "3  [450, 480, 510, 540, 570, 600, 630, 660, 690, ...  \n",
-      "4  [690, 720, 750, 780, 810, 840, 870, 900, 930, ...  \n"
+     "ename": "ValueError",
+     "evalue": "No objects to concatenate",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStage\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStage\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmap(stage_mapping)\n\u001b[1;32m     20\u001b[0m     df_list\u001b[38;5;241m.\u001b[39mappend(df)\n\u001b[0;32m---> 22\u001b[0m dataset \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(df_list, ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     24\u001b[0m dataset \u001b[38;5;241m=\u001b[39m dataset[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPatient\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStage\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStart\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(dataset)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/reshape/concat.py:372\u001b[0m, in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[1;32m    369\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m copy \u001b[38;5;129;01mand\u001b[39;00m using_copy_on_write():\n\u001b[1;32m    370\u001b[0m     copy \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m--> 372\u001b[0m op \u001b[38;5;241m=\u001b[39m _Concatenator(\n\u001b[1;32m    373\u001b[0m     objs,\n\u001b[1;32m    374\u001b[0m     axis\u001b[38;5;241m=\u001b[39maxis,\n\u001b[1;32m    375\u001b[0m     ignore_index\u001b[38;5;241m=\u001b[39mignore_index,\n\u001b[1;32m    376\u001b[0m     join\u001b[38;5;241m=\u001b[39mjoin,\n\u001b[1;32m    377\u001b[0m     keys\u001b[38;5;241m=\u001b[39mkeys,\n\u001b[1;32m    378\u001b[0m     levels\u001b[38;5;241m=\u001b[39mlevels,\n\u001b[1;32m    379\u001b[0m     names\u001b[38;5;241m=\u001b[39mnames,\n\u001b[1;32m    380\u001b[0m     verify_integrity\u001b[38;5;241m=\u001b[39mverify_integrity,\n\u001b[1;32m    381\u001b[0m     copy\u001b[38;5;241m=\u001b[39mcopy,\n\u001b[1;32m    382\u001b[0m     sort\u001b[38;5;241m=\u001b[39msort,\n\u001b[1;32m    383\u001b[0m )\n\u001b[1;32m    385\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m op\u001b[38;5;241m.\u001b[39mget_result()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/reshape/concat.py:429\u001b[0m, in \u001b[0;36m_Concatenator.__init__\u001b[0;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[1;32m    426\u001b[0m     objs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(objs)\n\u001b[1;32m    428\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(objs) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 429\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo objects to concatenate\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    431\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keys \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    432\u001b[0m     objs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(com\u001b[38;5;241m.\u001b[39mnot_none(\u001b[38;5;241m*\u001b[39mobjs))\n",
+      "\u001b[0;31mValueError\u001b[0m: No objects to concatenate"
      ]
     }
    ],
@@ -115,7 +95,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cnt_gen",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
