--- a/notebooks/anphy_code/artifact_mat_struct.ipynb
+++ b/notebooks/anphy_code/artifact_mat_struct.ipynb
@@ -9,7 +9,8 @@
     "import os\n",
     "import h5py\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from config.config import DataConfig"
    ]
   },
   {
@@ -34,10 +35,8 @@
     }
    ],
    "source": [
-    "artifact_folder = '/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep/artifact_matrix'\n",
-    "\n",
     "# List all .mat files in the folder\n",
-    "artifact_files = [f for f in os.listdir(artifact_folder) if f.endswith('.mat')]\n",
+    "artifact_files = [f for f in os.listdir(DataConfig.ARTIFACT_PATH) if f.endswith('.mat')]\n",
     "artifact_files = sorted(artifact_files)  # Sort alphabetically\n",
     "\n",
     "print('Artifact files found:')\n",
@@ -47,7 +46,7 @@
     "if artifact_files:\n",
     "    # Select the first file (or change the index to inspect a different file)\n",
     "    file_to_inspect = artifact_files[0]\n",
-    "    file_path = os.path.join(artifact_folder, file_to_inspect)\n",
+    "    file_path = os.path.join(DataConfig.ARTIFACT_PATH, file_to_inspect)\n",
     "    \n",
     "    print(f\"\\nInspecting file: {file_to_inspect}\\n\")\n",
     "    \n",
