--- a/notebooks/anphy_code/csv_creation.ipynb
+++ b/notebooks/anphy_code/csv_creation.ipynb
@@ -2,21 +2,251 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import mne\n",
+    "import numpy as np\n",
+    "from config.config import DataConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_into_csv(text_file):\n",
+    "    \"\"\"Convert text file into CSV with sleep stage labels\"\"\"\n",
+    "    data = pd.read_csv(text_file, sep='\\t', header=None, names=['Stage', 'Time', 'SamplingRate'])\n",
+    "\n",
+    "    output_file = text_file.replace('.txt', '_labeled.csv')\n",
+    "    \n",
+    "    os.makedirs(os.path.dirname(output_file), exist_ok=True)\n",
+    "        \n",
+    "    data.to_csv(output_file, sep='\\t', index=False)\n",
+    "    print(f\"Created CSV: {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing subject: EPCTL01\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL01/EPCTL01_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL02\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL02/EPCTL02_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL03\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL03/EPCTL03_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL04\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL04/EPCTL04_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL05\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL05/EPCTL05_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL06\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL06/EPCTL06_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL07\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL07/EPCTL07_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL08\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL08/EPCTL08_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL09\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL09/EPCTL09_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL10\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL10/EPCTL10_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL11\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL11/EPCTL11_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL12\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL12/EPCTL12_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL13\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL13/EPCTL13_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL14\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL14/EPCTL14_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL15\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL15/EPCTL15_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL16\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL16/EPCTL16_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL17\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL17/EPCTL17_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL18\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL18/EPCTL18_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL19\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL19/EPCTL19_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL20\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL20/EPCTL20_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL21\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL21/EPCTL21_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL22\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL22/EPCTL22_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL23\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL23/EPCTL23_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL24\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL24/EPCTL24_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL25\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL25/EPCTL25_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL26\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL26/EPCTL26_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL27\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL27/EPCTL27_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL28\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL28/EPCTL28_labeled.csv\n",
+      "\n",
+      "Processing subject: EPCTL29\n",
+      "Created CSV: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL29/EPCTL29_labeled.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "for subject_id in DataConfig.SUBJECTS:\n",
+    "    paths = DataConfig.get_subject_paths(subject_id)\n",
+    "    print(f\"\\nProcessing subject: {subject_id}\")\n",
+    "    try:\n",
+    "        convert_into_csv(paths['txt'])\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {subject_id}: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def annotate_edf_with_stages(edf_file, label_csv):\n",
+    "    \"\"\"\n",
+    "    Annotate EDF file with sleep stages from CSV labels\n",
+    "    \n",
+    "    Args:\n",
+    "        edf_file (str): Path to the EDF file\n",
+    "        label_csv (str): Path to the CSV file containing sleep stage labels\n",
+    "        \n",
+    "    Returns:\n",
+    "        mne.io.Raw: Annotated EDF data\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Read the EDF file\n",
+    "        raw = mne.io.read_raw_edf(edf_file, preload=True)\n",
+    "        # Read the labels\n",
+    "        labels = pd.read_csv(label_csv, sep='\\t')\n",
+    "        \n",
+    "        # Create annotations\n",
+    "        onset = labels['Time'].values  # Time in seconds\n",
+    "        duration = np.repeat(30, len(labels))  # 30-second epochs\n",
+    "        description = labels['Stage'].values\n",
+    "        \n",
+    "        # Create MNE annotations\n",
+    "        annotations = mne.Annotations(onset=onset,\n",
+    "                                   duration=duration,\n",
+    "                                   description=description)\n",
+    "        \n",
+    "        # Add annotations to the raw data\n",
+    "        raw.set_annotations(annotations)\n",
+    "        \n",
+    "        # Save annotated EDF (optional)\n",
+    "        output_file = edf_file.replace('.edf', '_annotated.edf')\n",
+    "        raw.save(output_file, overwrite=True)\n",
+    "        \n",
+    "        print(f\"Successfully annotated: {os.path.basename(edf_file)}\")\n",
+    "        return raw\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {os.path.basename(edf_file)}: {str(e)}\")\n",
+    "        return None\n",
+    "\n",
+    "def process_subject(subject_id):\n",
+    "    \"\"\"Process a single subject using paths from config\"\"\"\n",
+    "    paths = DataConfig.get_subject_paths(subject_id)\n",
+    "    label_csv = paths['txt'].replace('.txt', '_labeled.csv')\n",
+    "    \n",
+    "    if os.path.exists(paths['edf']) and os.path.exists(label_csv):\n",
+    "        raw = annotate_edf_with_stages(paths['edf'], label_csv)\n",
+    "        return raw\n",
+    "    else:\n",
+    "        print(f\"Files not found for subject {subject_id}\")\n",
+    "        print(f\"EDF exists: {os.path.exists(paths['edf'])}\")\n",
+    "        print(f\"CSV exists: {os.path.exists(label_csv)}\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing subject: EPCTL01\n",
+      "Extracting EDF parameters from /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL01/EPCTL01.edf...\n",
+      "EDF file detected\n",
+      "Setting channel info structure...\n",
+      "Creating raw.info structure...\n",
+      "Reading 0 ... 28737999  =      0.000 ... 28737.999 secs...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Process all subjects\n",
+    "for subject_id in DataConfig.SUBJECTS:\n",
+    "    print(f\"\\nProcessing subject: {subject_id}\")\n",
+    "    raw = process_subject(subject_id)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cnt_gen",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
