--- a/notebooks/week3_implementation.ipynb
+++ b/notebooks/week3_implementation.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "# should we try this dataset maybe?\n",
-    "url = \"https://osf.io/r26fh/download\"\n",
-    "data = pd.read_csv(url)"
+    "import torch.optim as optim"
    ]
   },
   {
